test/files/type-resolver/success/variable-input.otest
name = "Number variable in number input"

---

test = 440

sine(frequency: test)

---

name = "Constant variable in constant input"

---

test = sequence-forward

sequence(values: [ 0 ], order: test)

---

name = "String variable in string input"

---

test = "test"

sample(file: test)

---

name = "List variable in list input"

---

test = [ 1, 2, 3 ]

sequence(values: test)
